# signless-tutorial

./: README.md
ez-dApp-Template/: README.md  package.json  vite.config.ts
ez-dApp-Template/src/: App.tsx
ez-dApp-Template/src/hocs/: lib.ts
ez-dApp-Template/src/hooks/: use-sign-and-send.ts
ez-dApp-Template/src/pages/home/: Home.tsx  SwitchSignless.tsx
gasless-server/: .env.txt  package.json
smart-programs/Deposit-Program/: .gitpod.yml  README.md
smart-programs/Deposit-Program/app/: Cargo.toml
smart-programs/Deposit-Program/app/src/: lib.rs
smart-programs/Deposit-Program/app/src/services/: service.rs
smart-programs/Hello-world/: Cargo.toml  HelloWorld.idl  README.md
smart-programs/Hello-world/app/src/: lib.rs
smart-programs/Hello-world/app/src/services/: service.rs
smart-programs/VFT-Extended-Signless-Integration/: .gitpod.yml  vft_signless.idl
smart-programs/VFT-Extended-Signless-Integration/app/src/: lib.rs
smart-programs/VFT-Extended-Signless-Integration/app/src/services/: service.rs
