[workspace]
resolver = "2"

members = [
    "app", "wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"


[workspace.dependencies]
session-service = { git = "https://github.com/gear-foundation/signless-gasless-session-service.git" }
extended-vft-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vnft-client = { git = "https://github.com/gear-foundation/standards/"}
extended-vmt-client = { git = "https://github.com/gear-foundation/standards/"}
vft-service = { git = "https://github.com/gear-foundation/standards/"}
vmt-service = { git = "https://github.com/gear-foundation/standards/"}
vnft-service = { git = "https://github.com/gear-foundation/standards/"}
keyring-service = { git = "https://github.com/Vara-Lab/Contracts-Services"}
gstd    = "=1.8"
sails-rs = "=0.8.0"  
sails-client-gen = "=0.8.0"
sails-idl-gen = "=0.8.0"
